update: corsFilter allow all